--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.DL8JbIoM.js",
+    "file": "_app/immutable/entry/app.Bs4pr_jj.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -21,7 +21,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/0.js": {
-    "file": "_app/immutable/nodes/0.D7f2v1Ap.js",
+    "file": "_app/immutable/nodes/0.DkdAlppk.js",
     "name": "nodes/0",
     "src": ".svelte-kit/generated/client-optimized/nodes/0.js",
     "isEntry": true,
@@ -36,14 +36,14 @@
       "_CkAdUwA7.js",
       "_BSmZ11Ft.js",
       "_DoKfKMj9.js",
-      "_D9L3EhYe.js"
+      "_D_6ZYLMD.js"
     ],
     "css": [
-      "_app/immutable/assets/0.CeMS-mK2.css"
+      "_app/immutable/assets/0.CVcm6W2j.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.ei5zvtO1.js",
+    "file": "_app/immutable/nodes/1.D2x4b4w7.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -54,11 +54,11 @@
       "_CyF6-Xog.js",
       "_CkAdUwA7.js",
       "_BSmZ11Ft.js",
-      "_D9L3EhYe.js"
+      "_D_6ZYLMD.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
-    "file": "_app/immutable/nodes/2.CzH_iOCQ.js",
+    "file": "_app/immutable/nodes/2.B4lE6DOR.js",
     "name": "nodes/2",
     "src": ".svelte-kit/generated/client-optimized/nodes/2.js",
     "isEntry": true,
@@ -75,7 +75,7 @@
       "_C1IS3lTb.js"
     ],
     "css": [
-      "_app/immutable/assets/2.f-KLkZy_.css"
+      "_app/immutable/assets/2.Ba83oT1B.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/3.js": {
@@ -149,20 +149,20 @@
       "_CyF6-Xog.js"
     ]
   },
-  "_D9L3EhYe.js": {
-    "file": "_app/immutable/chunks/D9L3EhYe.js",
-    "name": "entry",
-    "imports": [
-      "_CyF6-Xog.js",
-      "_D46IKvaC.js",
-      "_C0WzV_g1.js"
-    ]
-  },
   "_DA92oIqu.js": {
     "file": "_app/immutable/chunks/DA92oIqu.js",
     "name": "legacy",
     "imports": [
       "_CyF6-Xog.js"
+    ]
+  },
+  "_D_6ZYLMD.js": {
+    "file": "_app/immutable/chunks/D_6ZYLMD.js",
+    "name": "entry",
+    "imports": [
+      "_CyF6-Xog.js",
+      "_D46IKvaC.js",
+      "_C0WzV_g1.js"
     ]
   },
   "_DoKfKMj9.js": {
@@ -188,12 +188,12 @@
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.DXNwps4k.js",
+    "file": "_app/immutable/entry/start.CAJtHh2O.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_D9L3EhYe.js"
+      "_D_6ZYLMD.js"
     ]
   }
 }
