--- a/.svelte-kit/output/server/.vite/manifest.json
+++ b/.svelte-kit/output/server/.vite/manifest.json
@@ -119,7 +119,7 @@
       "_state.svelte.js"
     ],
     "css": [
-      "_app/immutable/assets/_layout.CeMS-mK2.css"
+      "_app/immutable/assets/_layout.CVcm6W2j.css"
     ]
   },
   "src/routes/+page.svelte": {
@@ -132,7 +132,7 @@
       "_context.js"
     ],
     "css": [
-      "_app/immutable/assets/_page.f-KLkZy_.css"
+      "_app/immutable/assets/_page.Ba83oT1B.css"
     ]
   },
   "src/routes/about/+page.svelte": {
