--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.Bs4pr_jj.js",
+    "file": "_app/immutable/entry/app.DmjuZ8Jx.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -21,7 +21,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/0.js": {
-    "file": "_app/immutable/nodes/0.DkdAlppk.js",
+    "file": "_app/immutable/nodes/0.DguQtoky.js",
     "name": "nodes/0",
     "src": ".svelte-kit/generated/client-optimized/nodes/0.js",
     "isEntry": true,
@@ -36,14 +36,14 @@
       "_CkAdUwA7.js",
       "_BSmZ11Ft.js",
       "_DoKfKMj9.js",
-      "_D_6ZYLMD.js"
+      "_k8WFDl-k.js"
     ],
     "css": [
-      "_app/immutable/assets/0.CVcm6W2j.css"
+      "_app/immutable/assets/0.BjzqKO9a.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.D2x4b4w7.js",
+    "file": "_app/immutable/nodes/1.BGeM0o08.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -54,7 +54,7 @@
       "_CyF6-Xog.js",
       "_CkAdUwA7.js",
       "_BSmZ11Ft.js",
-      "_D_6ZYLMD.js"
+      "_k8WFDl-k.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
@@ -156,15 +156,6 @@
       "_CyF6-Xog.js"
     ]
   },
-  "_D_6ZYLMD.js": {
-    "file": "_app/immutable/chunks/D_6ZYLMD.js",
-    "name": "entry",
-    "imports": [
-      "_CyF6-Xog.js",
-      "_D46IKvaC.js",
-      "_C0WzV_g1.js"
-    ]
-  },
   "_DoKfKMj9.js": {
     "file": "_app/immutable/chunks/DoKfKMj9.js",
     "name": "store",
@@ -180,6 +171,15 @@
       "_CyF6-Xog.js"
     ]
   },
+  "_k8WFDl-k.js": {
+    "file": "_app/immutable/chunks/k8WFDl-k.js",
+    "name": "entry",
+    "imports": [
+      "_CyF6-Xog.js",
+      "_D46IKvaC.js",
+      "_C0WzV_g1.js"
+    ]
+  },
   "_n02RSbSe.js": {
     "file": "_app/immutable/chunks/n02RSbSe.js",
     "name": "disclose-version",
@@ -188,12 +188,12 @@
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.CAJtHh2O.js",
+    "file": "_app/immutable/entry/start.B_B9xrle.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_D_6ZYLMD.js"
+      "_k8WFDl-k.js"
     ]
   }
 }
