--- a/.svelte-kit/output/server/.vite/manifest.json
+++ b/.svelte-kit/output/server/.vite/manifest.json
@@ -119,7 +119,7 @@
       "_state.svelte.js"
     ],
     "css": [
-      "_app/immutable/assets/_layout.CVcm6W2j.css"
+      "_app/immutable/assets/_layout.BjzqKO9a.css"
     ]
   },
   "src/routes/+page.svelte": {
