--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.DmjuZ8Jx.js",
+    "file": "_app/immutable/entry/app.CtTvb-ZF.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -21,7 +21,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/0.js": {
-    "file": "_app/immutable/nodes/0.DguQtoky.js",
+    "file": "_app/immutable/nodes/0.Byd-J2tO.js",
     "name": "nodes/0",
     "src": ".svelte-kit/generated/client-optimized/nodes/0.js",
     "isEntry": true,
@@ -31,19 +31,19 @@
       "_CyF6-Xog.js",
       "_F6b9OAFo.js",
       "_C_WKoGjP.js",
-      "_C1IS3lTb.js",
+      "_BoP4gRn-.js",
       "_DA92oIqu.js",
       "_CkAdUwA7.js",
       "_BSmZ11Ft.js",
       "_DoKfKMj9.js",
-      "_k8WFDl-k.js"
+      "_B_5v6Ldd.js"
     ],
     "css": [
       "_app/immutable/assets/0.BjzqKO9a.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.BGeM0o08.js",
+    "file": "_app/immutable/nodes/1.B58RTqeW.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -54,11 +54,11 @@
       "_CyF6-Xog.js",
       "_CkAdUwA7.js",
       "_BSmZ11Ft.js",
-      "_k8WFDl-k.js"
+      "_B_5v6Ldd.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
-    "file": "_app/immutable/nodes/2.B4lE6DOR.js",
+    "file": "_app/immutable/nodes/2.vBu6agnd.js",
     "name": "nodes/2",
     "src": ".svelte-kit/generated/client-optimized/nodes/2.js",
     "isEntry": true,
@@ -72,7 +72,7 @@
       "_Bm3snW4G.js",
       "_BSmZ11Ft.js",
       "_CkAdUwA7.js",
-      "_C1IS3lTb.js"
+      "_BoP4gRn-.js"
     ],
     "css": [
       "_app/immutable/assets/2.Ba83oT1B.css"
@@ -101,6 +101,15 @@
       "_CyF6-Xog.js"
     ]
   },
+  "_B_5v6Ldd.js": {
+    "file": "_app/immutable/chunks/B_5v6Ldd.js",
+    "name": "entry",
+    "imports": [
+      "_CyF6-Xog.js",
+      "_D46IKvaC.js",
+      "_C0WzV_g1.js"
+    ]
+  },
   "_Bm3snW4G.js": {
     "file": "_app/immutable/chunks/Bm3snW4G.js",
     "name": "this",
@@ -109,16 +118,16 @@
       "_F6b9OAFo.js"
     ]
   },
-  "_C0WzV_g1.js": {
-    "file": "_app/immutable/chunks/C0WzV_g1.js",
-    "name": "index-client",
+  "_BoP4gRn-.js": {
+    "file": "_app/immutable/chunks/BoP4gRn-.js",
+    "name": "attributes",
     "imports": [
       "_CyF6-Xog.js"
     ]
   },
-  "_C1IS3lTb.js": {
-    "file": "_app/immutable/chunks/C1IS3lTb.js",
-    "name": "attributes",
+  "_C0WzV_g1.js": {
+    "file": "_app/immutable/chunks/C0WzV_g1.js",
+    "name": "index-client",
     "imports": [
       "_CyF6-Xog.js"
     ]
@@ -171,15 +180,6 @@
       "_CyF6-Xog.js"
     ]
   },
-  "_k8WFDl-k.js": {
-    "file": "_app/immutable/chunks/k8WFDl-k.js",
-    "name": "entry",
-    "imports": [
-      "_CyF6-Xog.js",
-      "_D46IKvaC.js",
-      "_C0WzV_g1.js"
-    ]
-  },
   "_n02RSbSe.js": {
     "file": "_app/immutable/chunks/n02RSbSe.js",
     "name": "disclose-version",
@@ -188,12 +188,12 @@
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.B_B9xrle.js",
+    "file": "_app/immutable/entry/start.BEK3iayz.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_k8WFDl-k.js"
+      "_B_5v6Ldd.js"
     ]
   }
 }
